--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,12 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="bottom_color">#7E7E7E</color>
+
+    <color name="background_app">#DAE1EA</color>
+    <color name="white">#ffffff</color>
+
+    <color name="red_bg">#e05858</color>
+
 </resources>
