--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="white">#ffffff</color>
 
     <color name="red_bg">#e05858</color>
+    <color name="divider_color">#D8D8D8</color>
 
 </resources>
