add project of tablayout

--- a/app/src/main/res/layout/fragment_project.xml
+++ b/app/src/main/res/layout/fragment_project.xml
@@ -9,9 +9,10 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:tabTextColor="@color/divider_color"
+        app:tabSelectedTextColor="@color/red_bg"
         app:layout_constraintTop_toTopOf="parent"
         android:background="@color/colorPrimary"
-        android:theme="@style/AppTheme.AppBarOverlay"
         app:tabGravity="center"
         app:tabIndicatorColor="@color/white"
         app:tabIndicatorHeight="@dimen/dp_2"
