--- a/app/src/main/res/layout/fragment_wechat.xml
+++ b/app/src/main/res/layout/fragment_wechat.xml
@@ -5,17 +5,9 @@
     android:background="@color/background_app"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/author"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/app_name"
-        android:textSize="13sp" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/wechatRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/author"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
