--- a/app/src/main/res/layout/fragment_tab_project.xml
+++ b/app/src/main/res/layout/fragment_tab_project.xml
@@ -16,6 +16,7 @@
         android:id="@+id/wechatRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/author"/>
+        android:layout_below="@id/author"
+        android:visibility="gone"/>
 
 </RelativeLayout>
