--- a/app/src/main/res/menu/navigation_bottom.xml
+++ b/app/src/main/res/menu/navigation_bottom.xml
@@ -3,7 +3,7 @@
 
     <item
         android:id="@+id/home"
-        android:icon="@drawable/ic_project"
+        android:icon="@drawable/ic_home"
         android:title="@string/home" />
 
     <item
