--- a/app/src/main/res/layout/view_header_home.xml
+++ b/app/src/main/res/layout/view_header_home.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/poster"
+<androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/viewpager2"
     android:layout_width="match_parent"
     android:layout_height="170dp"
-    android:background="@color/colorPrimary"
-    android:scaleType="fitXY"/>
+    android:orientation="horizontal"/>
 
 
